# shell-cmd

./: default.nix  shell-cmd.cabal  shell-cmd.nix  shell.nix
.github/workflows/: build.yml
nix/: sources.json
src/: Shell.hs
src/Shell/: Command.hs
