name: shell-cmd
version: 0.2.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: ppbogdan@gmail.com
homepage: https://github.com/pbogdan/shell-cmd
category: System
author: Piotr Bogdan

library
    exposed-modules:
        Shell
        Shell.Command
    build-depends:
        base >=4.9 && <4.10,
        extra >=1.5.0 && <1.7,
        monad-logger >=0.3.24 && <0.4,
        text >=1.2.2 && <1.3,
        posix-escape >=0.1 && <0.2,
        protolude >=0.1.10 && <0.2
    default-language: Haskell2010
    default-extensions: OverloadedStrings NoImplicitPrelude
    hs-source-dirs: src

